[package]
name = "llvm-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0" , features = ["lexer", "unicode"]  }
inkwell = { version = "0.2.0" , features = ["llvm15-0"] }
clap = { version = "4.3.17", features= ["derive"] }
rustyline = "12.0.0"

[build-dependencies]
lalrpop = { version = "0.20.0" }
